TAG: qcreports_db-6-0-27-4
DATE: 02/16/2026
STAFF: lec
wts2-1801/Cell Press & Springer Nature copyright entries & images QC
        modified:   weekly/GXD_Images.py

TAG: qcreports_db-6-0-27-3
DATE: 02/05/2026
STAFF: lec
wts2-1798/sprt-215/GXD HT Raw Sample Key Search 2
        new file:   pwi/GXD_HTRawSampleByKey2.py
        modified:   pwi/pwireports.txt

TAG: qcreports_db-6-0-27-2
DATE: 02/03/2026
STAFF: lec
wts2-1795/sprt-208/GXD Index Custom reports small issue
wts2-1794/sprt-209/Custom report for creative commons use
wts2-1796/sprt-210/All Alleles
        modified:   GXD_IndexOverview.py
	new file:   GXD_ImageNeedCreativeCommons.py
        modified:   pwireports.txt

TAG: qcreports_db-6-0-27-1
DATE: 01/15/2026
STAFF: lec
wts2-1780/Move gxd_antigen info to gxd_antibody

TAG: qcreports_db-6-0-26-6
TAG: qcreports_db-6-0-26-5
DATE: 12/16/2025
STAFF: lec
wts2-1778/sprt-161/Remove Obsolete Public, QC Reports
        deleted:    mgd/PRB_StrainJAX3.py
        deleted:    monthly/GXD_NotRouted.py
        deleted:    weekly/BIB_COVRefTagCounts.py
        deleted:    weekly/BIB_Covid.py

TAG: qcreports_db-6-0-26-4
DATE: 12/12/2025
STAFF: lec
wts2-1771/sprt-153/MGI GPI missing GCRPs as cross reference
run from reports_db/daily/GO_gpi.py

TAG: qcreports_db-6-0-26-3
DATE: 07/22/2025
STAFF: lec
        deleted:    mgd/GXD_HTRNASeq.py
	modified:   mgd/GXD_HTOverview.py
        modified:   qcr.shtml

TAG: qcreports_db-6-0-26-2
DATE: 07/11/2025
STAFF: lec
        modified:   mgd/GXD_SameStructure.py
	modified:   qcr.shtml

TAG: qcreports_db-6-0-26-1
DATE: 07/08/2025
STAFF: lec
wts2-1697/e4g-310/Display alleles associated with a strain in repository ID and strain name custom reports
        modified:   PRB_StrainNomenCheck.py
        modified:   PRB_StrainRepoCheck.py

TAG: qcreports_db-6-0-25-30
DATE: 07/07/2025
STAFF: lec
wts2-1695/e4g-304/tweak to GXD HT Experiment Partially Reviewed Papers custom report
        modified:   GXD_HTExperimentPMID.py